--- a/index.html
+++ b/index.html
@@ -136,8 +136,9 @@
             <h2 class="section__title">About Me</h2>
             <span class="section__subtitle">My introduction</span>
             <div class="about__container container grid">
-                <img src="img/about.jpg" alt="" class="about__img">
-
+                <div>
+                    <img src="img/about.jpg" alt="" class="about__img">
+                 </div>
                 <div class="about__data">
                     <p class="about__discription">Experiance in web design and development knowledge, producing
                         quality work.
@@ -425,7 +426,7 @@
             <h2 class="section__title">Contact Me</h2>
             <span class="section__subtitle">Get in touch</span>
 
-            <div class="contact__container container gird">
+            <div class="contact__container container grid">
                 <div>
                     <div class="contact__information">
                         <i class="uil uil-phone contact__icon"></i>
@@ -456,8 +457,8 @@
                 </div>
 
 
-                <form action="" class="contact__form gird">
-                    <div class="contact__inputs gird">
+                <form action="" class="contact__form grid">
+                    <div class="contact__inputs grid">
                         <div class="contact__content">
                             <label for="" class="contact__label">Name</label>
                             <input type="text" class="contact__input">
@@ -486,7 +487,7 @@
     </main>
     <footer class="footer">
         <div class="footer__bg">
-            <div class="footer__container container gird">
+            <div class="footer__container container grid">
                 <div>
                     <h1 class="footer__title">Amit</h1>
                     <span class="footer__subtitle">Web Designer</span>
